small grammar fixes

--- a/main.tex
+++ b/main.tex
@@ -67,7 +67,7 @@ An abstract is not necessary. Please do not include an abstract unless instructe
 The purpose of the first section is to address the following points at a high level.
 \begin{enumerate}
     \item Motivation. Why is this problem interesting? Why should the reader care?
-    \item Background. What other information is relevant to solving this problem that you do not plan to develop. For example, if you are building a mathematical model, other noteworthy modeling or analysis attempts at the phenomena of interest that might inform your approach should be discussed. This should be a brief, high level overview. For example if you are describing a new algorithm, you might write the following sentence.
+    \item Background. What other information is relevant to solving this problem that you do not plan to develop. For example, if you are building a mathematical model, other noteworthy modeling or analysis attempts at the phenomena of interest that might inform your approach should be discussed. This should be a brief, high-level overview. For example if you are describing a new algorithm, you might write the following sentence.
     \begin{quote}
         Popular iterative solvers often use Krylov subspace methods, but are not easily generalized to almost-symmetric matrices, $A+\epsilon$ where there is a small perturbation breaking an otherwise symmetric matrix.
     \end{quote}
@@ -79,10 +79,10 @@ The purpose of the first section is to address the following points at a high le
 Not all of these will apply and due to page limits you may not be able to reasonably address all of them. Fortunately, writing introductions is somewhat formulaic if you are familiar and conversational about the literature. For a three-to-five page report, the following three-paragraph structure works well.
 
 \begin{enumerate}
-    \item Paragraph 1. Funnel the reader in from a high level view of the subject, to the specific problem you are addressing. Start to motivate the problem and narrow down to your problem of interest.
+    \item Paragraph 1. Funnel the reader in from a high-level view of the subject, to the specific problem you are addressing. Start to motivate the problem and narrow down to your problem of interest.
     \item Paragraph 2. Introduce the specific research question you are going to solve. Discuss the problem in context of the broader literature. Both domain science and mathematical literature are relevant here. Draw any relevant comparisons to other work.
     \item Paragraph 3. Summarize your plan for the paper. This paragraph usually starts with ``In this paper, we will...'', or ``To answer this question, we ...''.\footnote{When you're reading papers, go look for this type of sentence in the last paragraph of the introduction. It's strikingly common.}
-          Sketch, at a high level, what your high level methodological approach will be and what your interpretation of these results will be. This is a good place to sketch out your report.
+          Sketch, at a high-level, what your methodological approach will be and what your interpretation of these results will be. This is a good place to sketch out your report.
 \end{enumerate}
 These can be collapsed together into one or two paragraphs depending on style and length constraints. The important thing is to address the three points above.
 
@@ -92,7 +92,7 @@ The later section heading ``Theoretical background and description of algorithms
 \begin{enumerate}
     \item Theoretical background. Now you can get into some detail about the literature or existing knowledge that informs your approach. Introduce any core mathematical concepts that are needed. For this course, if you deploy a new (to you) method, it would be appropriate to briefly introduce the method here. Introduce (briefly) any frameworks you are using (linear algebra, Fourier analysis, dynamical systems, etc.).
     \item Quickly transition to how the method/framework you introduced applies to the problem, explaining how you're using the items introduced in the theoretical background to solve this problem.
-    \item Introduce any further algorithms you need to use. \emph{You do not need to give the textbook description of the algorithm}, but you should give a high level overview of how the algorithm works and how it applies to your problem. If this application isn't obvious to you, take an extra sentence to explain how it will solve the problem.
+    \item Introduce any further algorithms you need to use. \emph{You do not need to give the textbook description of the algorithm}, but you should give a high-level overview of how the algorithm works and how it applies to your problem. If this application isn't obvious to you, take an extra sentence to explain how it will solve the problem.
 \end{enumerate}
 
 \emph{The methods section should not contain any results or any code}. If randomization was used in your work (typically to generate data), you do not need to record the random seed in your report. The setting of a random seed in your code is sufficient.
@@ -105,7 +105,7 @@ A well written results section does the following:
 \begin{enumerate}
     \item Present the results in a logical order. Start with the logical beginning, and progress. This often does not correspond to the chronological order of your experiments.
     \item Figures and tables should be used \emph{as needed} to communicate results. The main text and your arguments should be understandable without requiring the user to read the figures. Figures should be used to support your arguments, not make them.
-    \item Remembers that evidence does not explain itself. You need to explain what the evidence means, and how it supports your arguments you make to answer the research question.
+    \item Remember that evidence does not explain itself. \emph{You} need to explain what the evidence means, and \emph{how it supports the arguments that you make} to answer the research question.
 \end{enumerate}
 
 \subsection{Discussion}
